pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-1
  labels:
    app: my-pod-1
spec:
  containers:
    - image: nginx:1.12
      name: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 50m
          memory: 100Mi
        limits:
          cpu: 100m
          memory: 100Mi
  serviceAccountName: user

---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-2
  labels:
    app: my-pod-2
  namespace: kube-system
spec:
  containers:
    - image: nginx:1.12
      name: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 50m
          memory: 100Mi
        limits:
          cpu: 100m
          memory: 100Mi
  serviceAccountName: user
