ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: kubeworker2
    http:
      paths:
        - backend:
            service:
              name: my-service
              port:
                number: 80
          pathType: Prefix
          path: /
